test/fail/variablenotdefined.app
// invalid left-hand side in assignment

application test

section functions

globals {
  function do() {
    a := 3;
  }
}